--- a/fragments/build-cluster/accelerator.yaml
+++ b/fragments/build-cluster/accelerator.yaml
@@ -49,6 +49,7 @@ accelerator:
         - name: jenkinsIntegration
           label: Integrate With Jenkins
           inputType: checkbox
+          dataType: boolean
           defaultValue: false
         - name: sourceScanner
           label: Source Scanner
