--- a/fragments/git-provider/accelerator.yaml
+++ b/fragments/git-provider/accelerator.yaml
@@ -35,5 +35,6 @@ accelerator:
   - name: internalCA
     label: Trust Internal CA
     inputType: checkbox
+    dataType: boolean
     defaultValue: false
     
