--- a/fragments/view-cluster/accelerator.yaml
+++ b/fragments/view-cluster/accelerator.yaml
@@ -48,3 +48,4 @@ accelerator:
           defaultValue: false
           inputType: checkbox
           label: Enable Guest Authentication
+          dataType: boolean
