--- a/fragments/iterate-cluster/accelerator.yaml
+++ b/fragments/iterate-cluster/accelerator.yaml
@@ -47,6 +47,7 @@ accelerator:
         - name: enableSCG
           defaultValue: false
           inputType: checkbox
+          dataType: boolean
           label: Include Spring Cloud Gateway Installation
         - name: enableScgPerNamespace
           defaultValue: false
@@ -54,12 +55,15 @@ accelerator:
             name: enableSCG
             value: true
           inputType: checkbox
+          dataType: boolean
           label: Create Spring Cloud Gateway Per Namespace
         - name: enableESO
           defaultValue: false
           inputType: checkbox
+          dataType: boolean
           label: Include External Secrets Operator
         - name: enableAppSSO
           defaultValue: false
           inputType: checkbox
+          dataType: boolean
           label: Include AppSSO Auth Server Config
