--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -27,13 +27,13 @@ accelerator:
         - name: supplyChain
           label: Supply Chain
           inputType: select
-          defaultValue: "basic"
+          defaultValue: "testingScanning"
           choices:
           - value: basic
             text: Basic
           - value: testing
             text: Testing
-          - value: testing-scanning
+          - value: testingScanning
             text: Testing and Scanning
         - name: deliveryMethod
           inputType: select
@@ -41,9 +41,9 @@ accelerator:
             - text: RegOps (Imgpkg)
               value: regOps
             - text: GitOps Direct Commit
-              value: commit
+              value: direct
             - text: GitOps PR Flow
-              value: prFlow
+              value: pull_request
           defaultValue: commit
           label: Deliverable Methodology
         - name: enableSCG
@@ -97,3 +97,76 @@ accelerator:
             - text: Snyk
               value: snyk
           defaultValue: grype
+        - name: authProvider
+          inputType: select
+          choices:
+            - text: "Azure AD"
+              value: azureAD
+            - text: "Okta"
+              value: okta
+            - text: "Github"
+              value: github
+            - text: "Gitlab"
+              value: gitlab
+            - text: "Google"
+              value: google
+            - text: "None"
+              value: none
+          defaultValue: none
+          label: External IDP for TAP GUI
+          required: true
+        - name: guestAuth
+          defaultValue: false
+          inputType: checkbox
+          label: Enable Guest Authentication
+          dataType: boolean
+  engine:
+    chain:
+    - merge:
+      - include: [ "**/*" ]
+        exclude: ["cluster-template.yaml", "values.yaml"]
+      - include: ["values.yaml"]
+        chain:
+        - include: [ "config/workload.yaml" ]
+          chain:
+          - type: OpenRewriteRecipe
+            condition: "#authProvider != 'github'"
+            recipe: org.openrewrite.yaml.DeleteKey
+            options:
+              keyPath: '"$.tapGui.auth.github"'
+          - type: OpenRewriteRecipe
+            condition: "#authProvider != 'okta'"
+            recipe: org.openrewrite.yaml.DeleteKey
+            options:
+              keyPath: '"$.tapGui.auth.okta"'
+          - type: OpenRewriteRecipe
+            condition: "#authProvider != 'gitlab'"
+            recipe: org.openrewrite.yaml.DeleteKey
+            options:
+              keyPath: '"$.tapGui.auth.gitlab"'
+          - type: OpenRewriteRecipe
+            condition: "#authProvider != 'azureAD'"
+            recipe: org.openrewrite.yaml.DeleteKey
+            options:
+              keyPath: '"$.tapGui.auth.azureAD"'
+          - type: OpenRewriteRecipe
+            condition: "#authProvider != 'google'"
+            recipe: org.openrewrite.yaml.DeleteKey
+            options:
+              keyPath: '"$.tapGui.auth.google"'
+              
+      - include: ["cluster-template.yaml"]
+        chain:
+        - type: ReplaceText
+          substitutions:
+          - text: SUPPLY_CHAIN_OF_CHOICE
+            with: "#supplyChain"
+          - text: CUSTOMER_NAME
+            with: "#artifactId"
+        - type: ReplaceText
+          condition: "#deliveryMethod != 'regOps'"
+          substitutions:
+          - text: COMMIT_STRATEGY
+            with: "#deliveryMethod"
+          - text: GIT_KIND
+            with: "#gitType"
