--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -130,27 +130,27 @@ engine:
       - include: [ "config/workload.yaml" ]
         chain:
         - type: OpenRewriteRecipe
-          condition: "#authProvider != 'github'"
+          condition: "#FullCluster['authProvider'] != 'github'"
           recipe: org.openrewrite.yaml.DeleteKey
           options:
             keyPath: '"$.tapGui.auth.github"'
         - type: OpenRewriteRecipe
-          condition: "#authProvider != 'okta'"
+          condition: "#FullCluster['authProvider'] != 'okta'"
           recipe: org.openrewrite.yaml.DeleteKey
           options:
             keyPath: '"$.tapGui.auth.okta"'
         - type: OpenRewriteRecipe
-          condition: "#authProvider != 'gitlab'"
+          condition: "#FullCluster['authProvider'] != 'gitlab'"
           recipe: org.openrewrite.yaml.DeleteKey
           options:
             keyPath: '"$.tapGui.auth.gitlab"'
         - type: OpenRewriteRecipe
-          condition: "#authProvider != 'azureAD'"
+          condition: "#FullCluster['authProvider'] != 'azureAD'"
           recipe: org.openrewrite.yaml.DeleteKey
           options:
             keyPath: '"$.tapGui.auth.azureAD"'
         - type: OpenRewriteRecipe
-          condition: "#authProvider != 'google'"
+          condition: "#FullCluster['authProvider'] != 'google'"
           recipe: org.openrewrite.yaml.DeleteKey
           options:
             keyPath: '"$.tapGui.auth.google"'
@@ -160,13 +160,13 @@ engine:
       - type: ReplaceText
         substitutions:
         - text: SUPPLY_CHAIN_OF_CHOICE
-          with: "#supplyChain"
+          with: "#FullCluster['supplyChain']"
         - text: CUSTOMER_NAME
           with: "#artifactId"
       - type: ReplaceText
-        condition: "#deliveryMethod != 'regOps'"
+        condition: "#FullCluster['deliveryMethod'] != 'regOps'"
         substitutions:
         - text: COMMIT_STRATEGY
-          with: "#deliveryMethod"
+          with: "#FullCluster['deliveryMethod']"
         #- text: GIT_KIND
         #  with: "#gitType"
