--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -152,50 +152,50 @@ engine:
   chain:
   - merge:
     - include: [ "**/*" ]
-      exclude: ["cluster-template.yaml", "values.yaml", "scanner/*"]
+      exclude: ["cluster-template.yaml", "values.yaml", "scanner/*", "overlays/*"]
     - include: ["values.yaml"]
       chain:
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'github'"
-          recipe: org.openrewrite.yaml.DeleteKey
-          options:
-            keyPath: '"$.tapGui.auth.github"'
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'okta'"
-          recipe: org.openrewrite.yaml.DeleteKey
-          options:
-            keyPath: '"$.tapGui.auth.okta"'
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'gitlab'"
-          recipe: org.openrewrite.yaml.DeleteKey
-          options:
-            keyPath: '"$.tapGui.auth.gitlab"'
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'azureAD'"
-          recipe: org.openrewrite.yaml.DeleteKey
-          options:
-            keyPath: '"$.tapGui.auth.azureAD"'
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'google'"
-          recipe: org.openrewrite.yaml.DeleteKey
-          options:
-            keyPath: '"$.tapGui.auth.google"'  
-        - type: OpenRewriteRecipe
-          condition: "#fullClusterConfig['authProvider'] != 'none'"
-          recipe: org.openrewrite.yaml.ChangeValue
-          options:
-            oldKeyPath: '"$.tapGui.auth.provider"'
-            value: "#fullClusterConfig['authProvider']"
-        - type: OpenRewriteRecipe
-          recipe: org.openrewrite.yaml.ChangeValue
-          options:
-            oldKeyPath: '"$.security.sourceScanner"'
-            value: "#fullClusterConfig['sourceScanner']"
-        - type: OpenRewriteRecipe
-          recipe: org.openrewrite.yaml.ChangeValue
-          options:
-            oldKeyPath: '"$.security.imageScanner"'
-            value: "#fullClusterConfig['imageScanner']"
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'github'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.tapGui.auth.github"'
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'okta'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.tapGui.auth.okta"'
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'gitlab'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.tapGui.auth.gitlab"'
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'azureAD'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.tapGui.auth.azureAD"'
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'google'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.tapGui.auth.google"'  
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['authProvider'] != 'none'"
+        recipe: org.openrewrite.yaml.ChangeValue
+        options:
+          oldKeyPath: '"$.tapGui.auth.provider"'
+          value: "#fullClusterConfig['authProvider']"
+      - type: OpenRewriteRecipe
+        recipe: org.openrewrite.yaml.ChangeValue
+        options:
+          oldKeyPath: '"$.security.sourceScanner"'
+          value: "#fullClusterConfig['sourceScanner']"
+      - type: OpenRewriteRecipe
+        recipe: org.openrewrite.yaml.ChangeValue
+        options:
+          oldKeyPath: '"$.security.imageScanner"'
+          value: "#fullClusterConfig['imageScanner']"
     - include: ["cluster-template.yaml"]
       chain:
       - type: OpenRewriteRecipe
