--- a/fragments/full-cluster/values.yaml
+++ b/fragments/full-cluster/values.yaml
@@ -18,6 +18,10 @@ buildservice:
   password: 
 vmwareAccountNumber: 
 security:
+  cosign: 
+    privateKey: 
+    publicKey: 
+    password: 
   sourceScanner: grype
   imageScanner: grype
   signImages: 
