--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -161,7 +161,7 @@ engine:
   chain:
   - merge:
     - include: [ "**/*" ]
-      exclude: ["cluster-template.yaml", "values.yaml", "scanner/*", "overlays/*", "additions/*"]
+      exclude: ["README.md","cluster-template.yaml", "values.yaml", "scanner/*", "overlays/*", "additions/*", "readme-snippets/*"]
     - include: ["cluster-template.yaml"]
       chain:
       - type: OpenRewriteRecipe
@@ -238,6 +238,21 @@ engine:
     - include: ["values.yaml"]
       chain:
       - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['sourceScanner'] != 'prisma' and #fullClusterConfig['imageScanner'] != 'prisma'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.security.prisma"'  
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['imageScanner'] != 'snyk'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.security.snyk"'  
+      - type: OpenRewriteRecipe
+        condition: "#fullClusterConfig['imageScanner'] != 'cbc'"
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.security.cbc"'  
+      - type: OpenRewriteRecipe
         condition: "#fullClusterConfig['authProvider'] != 'github'"
         recipe: org.openrewrite.yaml.DeleteKey
         options:
@@ -278,3 +293,46 @@ engine:
         options:
           oldKeyPath: '"$.security.imageScanner"'
           value: "#fullClusterConfig['imageScanner']"
+    - include: ["README.md"]
+    - include: ["readme-snippets/cosign.md"]
+      condition: "#fullClusterConfig['enableCosign']"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/eso.md"]
+      condition: "#fullClusterConfig['enableESO']"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/scg.md"]
+      condition: "#fullClusterConfig['enableSCG']"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/acs.md"]
+      condition: "#fullClusterConfig['enableACS']"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/cbc.md"]
+      condition: "#fullClusterConfig['imageScanner'] == 'cbc'"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/prisma.md"]
+      condition: "#fullClusterConfig['sourceScanner'] == 'prisma' or #fullClusterConfig['imageScanner'] == 'prisma'"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/snyk.md"]
+      condition: "#fullClusterConfig['imageScanner'] == 'snyk'"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+    - include: ["readme-snippets/trivy.md"]
+      condition: "#fullClusterConfig['sourceScanner'] == 'trivy' or #fullClusterConfig['imageScanner'] == 'trivy'"
+      chain:
+      - type: RewritePath
+        rewriteTo: "'README.md'"
+  - type: UniquePath
+    strategy: Append
