--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -201,6 +201,11 @@ engine:
         options:
           oldKeyPath: '"$.supply_chain"'
           value: "#fullClusterConfig['supplyChain']"
+      - type: OpenRewriteRecipe
+        recipe: org.openrewrite.yaml.DeleteKey
+        options:
+          keyPath: '"$.package_overlays[?(@.name == \'contour\']"'
+          
     - include: ["scanner/prisma-creds.yaml","scanner/prisma-pkgr.yaml"]
       condition: "#fullClusterConfig['sourceScanner'] == 'prisma'" 
     - include: ["scanner/trivy-pkgr.yaml"]
