--- a/fragments/full-cluster/accelerator.yaml
+++ b/fragments/full-cluster/accelerator.yaml
@@ -204,8 +204,8 @@ engine:
       - type: OpenRewriteRecipe
         recipe: org.openrewrite.yaml.DeleteKey
         options:
-          keyPath: '"$.package_overlays[?(@.name == \'contour\']"'
-          
+          keyPath: '"$.package_overlays[?(@.name == \"contour\"]"'
+
     - include: ["scanner/prisma-creds.yaml","scanner/prisma-pkgr.yaml"]
       condition: "#fullClusterConfig['sourceScanner'] == 'prisma'" 
     - include: ["scanner/trivy-pkgr.yaml"]
